# RogueLike

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  entity.cpp  main.cpp  player.cpp  renderer.cpp
src/include/: entity.hpp  gameSettings.hpp  main.hpp  player.hpp  renderer.hpp
